@@ -27,8 +27,15 @@ dependencies {
 
             'org.slf4j:slf4j-api:1.7.30',
             'org.slf4j:slf4j-simple:1.7.30',
-            'com.opencsv:opencsv:5.1'
+            'com.opencsv:opencsv:5.1',
+
+            'com.github.sarxos:webcam-capture:0.3.12',
+            'com.google.zxing:core:3.4.0',
+            'com.google.zxing:javase:3.4.0'
     )
+
+
+    compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
 
     testImplementation(
             'org.junit.jupiter:junit-jupiter:5.6.0',
@@ -39,13 +46,24 @@ dependencies {
     testRuntimeOnly(
             'org.testfx:openjfx-monocle:jdk-11+26',
     )
+    implementation 'junit:junit:4.12'
 }
 
 javafx {
     version = "11"
-    modules = ['javafx.controls', 'javafx.fxml']
+     modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing']
 }
 
+run {
+    jvmArgs = ['--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
+               '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+               '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+               '--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
+               '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED',
+    ]
+}
 
 test {
     useJUnitPlatform()
@@ -63,6 +81,9 @@ jar {
 def codeCoverageExcludes = [
         'edu.wpi.N.App',
         'edu.wpi.N.Main',
+        'edu.wpi.N.entities.*',
+        'edu.wpi.N.views.*',
+        'edu.wpi.N.qrcontrol.*'
 ]
 
 jacoco {
